--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: rgba(0, 0, 0, 0.871);
+    background-color: rgba(0, 0, 0, 0.871) !important;
     color: rgba(255, 255, 255, 0.711);
 }
 
